kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-app-svc
  namespace: dev
  labels:
    app: devsecops-app
spec:
  type: ClusterIP
  selector:
    app: devsecops-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
